fixed the banner being a bit too large making the horizontal scroll always being visible

--- a/src/Components/Banner/BannerComponent.css
+++ b/src/Components/Banner/BannerComponent.css
@@ -3,8 +3,10 @@
     background-color: white;
     background-position: fixed;
     height: 200px;
-    padding: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     display: flex;
     width: 100%;
+    max-width: auto;
     justify-content: center;
   }
